--- a/nodepool/config/templates/cluster.yaml
+++ b/nodepool/config/templates/cluster.yaml
@@ -58,6 +58,9 @@ kmsKeyArn: "{{.KMSKeyARN}}"
 # Disk type for worker node (one of standard, io1, or gp2)
 #workerRootVolumeType: gp2
 
+# Indicates whether the volume is encrypted
+#workerRootVolumeEncrypted: true
+
 # Number of I/O operations per second (IOPS) that the worker node disk supports. Leave blank if workerRootVolumeType is not io1
 #workerRootVolumeIOPS: 0
 
@@ -112,6 +115,9 @@ kmsKeyArn: "{{.KMSKeyARN}}"
 #    # Disk type for worker node (one of standard, io1, or gp2)
 #    # Can be overridden in each launch specification
 #    #rootVolumeType: gp2
+#     
+#    # Indicates whether the volume is encrypted
+#    #rootVolumeEncrypted: true
 #
 #    # Number of I/O operations per second (IOPS) per unit. Leave blank if rootVolumeType is not io1
 #    # IOPS for each launch specification defaults to unitRootVolumeIOPS * weightedCapacity
@@ -127,6 +133,9 @@ kmsKeyArn: "{{.KMSKeyARN}}"
 #
 #      # Defaults to worker.spotFleet.rootVolumeType if omitted
 #      #rootVolumeType:
+#
+#      # Indicates whether the volume is encrypted
+#      #rootVolumeEncrypted: true
 #
 #      # Defaults to worker.spotFleet.unitRootVolumeSize * weightedCapacity if omitted
 #      #rootVolumeSize:
